# HoloPhysicsLab2

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  asan.supp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
docs/: lua_api.md
scripts/: release.sh
src/: HoloPhysicsApp.cpp  HoloPhysicsApp.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Engine.cpp  Engine.h  Profiler.h  Scene.cpp  Scene.h  Solver.cpp  Solver.h  Types.cpp  Types.h
src/cv/: CameraCapture.cpp  CameraCapture.h  DepthCalibrator.cpp  DepthCalibrator.h  HandTracker.cpp  HandTracker.h
src/ecs/: Entity.cpp  Entity.h
src/ecs/core/: Registry.h
src/ecs/systems/: PhysicsSystems.cpp  PhysicsSystems.h
src/input/: HermiteInterpolator.cpp  HermiteInterpolator.h  PredictiveKalman.cpp  PredictiveKalman.h  VirtualHand.cpp  VirtualHand.h
src/input/sources/: IHandSource.cpp  IHandSource.h
src/interaction/: HandInteraction.cpp  HandInteraction.h
src/physics/: AdaptiveTimestep.cpp  AdaptiveTimestep.h  BoundaryConditions.cpp  BoundaryConditions.h  CCD.cpp  CCD.h  CollisionSystem.cpp  CollisionSystem.h  ConstraintSolver.cpp  ConstraintSolver.h  MahalanobisGater.cpp  MahalanobisGater.h  RotationalDynamics.cpp  RotationalDynamics.h  VirtualCoupling.cpp  VirtualCoupling.h
src/physics/queue/: LockFreeEventQueue.h
src/render/: ARRenderer.cpp  ARRenderer.h  CameraRelativeRenderer.cpp  CameraRelativeRenderer.h  MetaballOcclusion.cpp  MetaballOcclusion.h  OcclusionRenderer.cpp  OcclusionRenderer.h  OptimizedMetaball.cpp  OptimizedMetaball.h  Renderer.cpp  Renderer.h  ShadowCatcher.cpp  ShadowCatcher.h
src/scripting/: ScriptEngine.cpp  ScriptEngine.h
src/ui/: AppUI.cpp  AppUI.h
src/xr/: OpenXRManager.cpp  OpenXRManager.h
tests/: test_collisions.cpp  test_integrators.cpp  test_physics.cpp  test_runner.h  test_spsc_queue.cpp
